# cellguard

./: README.md  Ravedude.toml  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.devcontainer/: Containerfile  devcontainer.json
cellagent/: Cargo.toml
cellagent-attiny416/: Cargo.toml  Ravedude.toml
cellagent-attiny416/.cargo/: config.toml
cellagent-attiny416/src/: hal.rs  main.rs
cellagent-attiny416/src/hal/: sigrow.rs
cellagent-core/: Cargo.toml
cellagent-protocol/: Cargo.toml
cellagent/.cargo/: config.toml
cellagent/src/: lib.rs
cellagent_attiny416/: Cargo.toml
cellagent_attiny416/src/: hal.rs  main.rs
cellcore/: Cargo.toml
cellcore-avr128db28/: Cargo.toml
cellcore-avr128db48/: Cargo.toml
cellcore-avr128db48/.cargo/: config.toml
cellcore-avr128db48/src/: main.rs
cellcore/src/: lib.rs
cellcore_avr128db28/: Cargo.toml
cellcore_avr128db28/.cargo/: config.toml
cellcore_avr128db28/src/: main.rs
libraries/: Cargo.toml
libraries/ads131m08/: Cargo.toml
libraries/ads131m08/src/: command.rs  error.rs  frame.rs  lib.rs  register.rs
libraries/cellagent/: Cargo.toml
libraries/cellagent-boot/: Cargo.toml
libraries/cellagent-boot/src/: lib.rs  storage.rs
libraries/cellagent-protocol/: Cargo.toml
libraries/cellagent-protocol/src/: cobs.rs  lib.rs
libraries/cellagent-protocol/src/cobs/: decode.rs  encode.rs
libraries/cellagent/src/: lib.rs
libraries/cellagent_boot/: Cargo.toml
libraries/cellagent_boot/src/: lib.rs
libraries/cellagent_protocol/: Cargo.toml
libraries/cellcore/: Cargo.toml
libraries/cellcore/src/: lib.rs
libraries/p3t1755/: Cargo.toml
libraries/p3t1755/src/: address.rs  alert.rs  lib.rs  register.rs
libraries/p3t1755/tests/: integration_test.rs
libraries/tca9535/: Cargo.toml
libraries/tca9535/src/: address.rs  lib.rs  pin.rs  register.rs
libraries/tca9535/tests/: integration_test.rs
src/: main.rs
