[workspace]
resolver = "3"
members = ["cellagent", "cellagent-protocol", "cellcore"]

[workspace.package]
authors = ["Simon Berger <simon@siku2.io>"]
edition = "2024"
license = "AGPL-3.0-or-later"
publish = false
repository = "https://github.com/stargrid-systems/cellguard"
rust-version = "1.93"

[workspace.dependencies]
embedded-hal = { version = "1", default-features = false }
zerocopy = { version = "0.8", default-features = false }
