[package]
name = "ads131m08"
version = "0.1.0"
description = "Driver for the Texas Instruments ADS131M08 ADC."
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
embedded-hal.workspace = true

[lints]
workspace = true
