[package]
name = "p3t1755"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
embedded-hal = { workspace = true }

[dev-dependencies]
embedded-hal-mock = { workspace = true }

[lints]
workspace = true
